adding basic exact sample front page and assets

--- a/exact_clone/templates/index.html
+++ b/exact_clone/templates/index.html
@@ -1,1 +1,87 @@
-<h1>Hello, Word!</h1>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
+    <title>E-xact Shopping</title>
+    <link href="/site_media/css/exact_clone.css" media="all" rel="Stylesheet" type="text/css" />
+
+  </head>
+
+  <body onload="postLoad(null)">
+    <div id="wrap">
+
+      <div id="header" class="fixClear">
+	<div id="headerLogo">
+
+	  <a href="/store/welcome"><img alt="E-xact Transactions" src="/site_media/img/merchant_logo.gif" /></a>
+	</div>
+	<div id="headerContent">
+	  &nbsp;
+	</div>
+      </div>
+
+      <div id="topMenu">
+	<div id="topMenuContent">
+
+	  <table class="menuTable" cellspacing="0" cellpadding="0">
+	    <tr>
+	      <td><a href="/store/welcome">HOME</a></td>
+              <td><a href="">REFUND POLICY</a></td>
+              <td><a href="">HELP</a></td>
+              <td id="topCartLink" class="cartIcon">
+                <a href="/store/display_cart">SHOPPING CART</a>
+
+                <span id="topCartSummary">
+                 (0 items)
+                </span>
+              </td>
+	    </tr>
+	  </table>
+	</div>
+      </div>
+
+      <div id="categories">
+
+	<div id="categoriesContent">
+	  <table class="menuTable" cellspacing="0" cellpadding="0">
+	    <tr>
+              	        	        		<td><a href="/store?top=6">BICYCLES</a></td>
+	      	        		<td><a href="/store?top=9">CAMERAS</a></td>
+	      	        		<td><a href="/store?top=10">CELL PHONES</a></td>
+	      	        	        	        	        	        	        		<td><a href="/store?top=2">PANTS</a></td>
+
+	      	    </tr>
+	  </table>
+	</div>
+      </div>
+
+      
+	<div id="welcomePlate">
+	  <div id="contentPadding">
+  <h1>E-xact Shopping</h1>
+  <h3>Check out our June  sales!</h3>
+
+  <img src="/site_media/img/exact-welcome.jpg">
+</div>
+
+	</div>
+      
+
+      <div id="footer">
+	<div id="footerContent">
+	  <table class="menuTable" cellspacing="0" border="0">
+	    <tr>
+              <td>&copy; 2006 E-xact Transactions</td>
+
+              <td>Site Use</td>
+              <td>Privacy and Security</td>
+	    </tr>
+	  </table>
+	</div>
+      </div>                      <!-- END footer -->
+
+    </div>                        <!-- END wrap -->
+
+  </body>
+</html>
+
