template fix.. show the actual price in gallery if it is a product, otherwise do not show anything

--- a/exact_clone/templates/gallery/index.html
+++ b/exact_clone/templates/gallery/index.html
@@ -17,7 +17,9 @@
             <li class="vertical_item">
 	  <p class="prodImageLabel">
           {{photo.title}}<br/>
-	    <strong>$499.99</strong>
+          {% if photo.product %}
+              <strong>${{photo.product.price|floatformat:2}}</strong>
+          {% endif %}
 	  </p>
           </li>
         </ul>
